5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1828_1651.log
== TEST (2019-06-12 14:10:45) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="mc"):
		mc=mc+1
	elif(n[1]=="c"):
		c=c+1
	elif(n[2]=="cm"):
		cm=cm+1
	elif(n[3]=="em"):
		em=em+1
	elif(n[4]=="e"):
		e=e+1
	elif(n[5]=="me"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:29) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="mc"):
		mc=mc+1
	elif(n[1]=="c"):
		c=c+1
	elif(n[2]=="cm"):
		cm=cm+1
	elif(n[3]=="em"):
		em=em+1
	elif(n[4]=="e"):
		e=e+1
	elif(n[5]=="me"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:49) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
mc=0
C=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="mc"):
		mc=mc+1
	elif(n[1]=="c"):
		c=c+1
	elif(n[2]=="cm"):
		cm=cm+1
	elif(n[3]=="em"):
		em=em+1
	elif(n[4]=="e"):
		e=e+1
	elif(n[5]=="me"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:59) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
mc=0
C=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="mc"):
		mc=mc+1
	elif(n[1]=="c"):
		c=c+1
	elif(n[2]=="cm"):
		cm=cm+1
	elif(n[3]=="em"):
		em=em+1
	elif(n[4]=="e"):
		e=e+1
	elif(n[5]=="me"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:12:48) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="mc"):
		mc=mc+1
	elif(n[1]=="c"):
		c=c+1
	elif(n[2]=="cm"):
		cm=cm+1
	elif(n[3]=="em"):
		em=em+1
	elif(n[4]=="e"):
		e=e+1
	elif(n[5]=="me"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:13:57) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="mc"):
		mc=mc+1
	elif(n[1]=="c"):
		c=c+1
	elif(n[2]=="cm"):
		cm=cm+1
	elif(n[3]=="em"):
		em=em+1
	elif(n[4]=="e"):
		e=e+1
	elif(n[5]=="me"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:15:05) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).upper().split(',')
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:15:24) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).split(',')
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:15:49) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o tom de pele: "))).split(',').upper()
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:16:37) 
-- CODE:
from numpy import*
n = input("Digite o tom de pele: ").split(',').upper()
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:35) 
-- CODE:
from numpy import*
n = array(input("Digite o tom de pele: ")).split(',').upper()
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:43) 
-- CODE:
from numpy import*
n = input("Digite o tom de pele: ").upper().split(',')
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(n)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:28) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(vet)):
	if(n[0]=="MC"):
		mc=mc+1
	elif(n[1]=="C"):
		c=c+1
	elif(n[2]=="CM"):
		cm=cm+1
	elif(n[3]=="EM"):
		em=em+1
	elif(n[4]=="E"):
		e=e+1
	elif(n[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:03) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
print(n)
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:17) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
if i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:51) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:25) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:46) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:26) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:25:17) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1

v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:58) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:25) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(size(vet),dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:31) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:02) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:11) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:22) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(size(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
File "XXXX", line 24
    v[0]=mc
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:25) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(size(vet)))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:01) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(size(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
File "XXXX", line 24
    v[0]=mc
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:03) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(size(vet)))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:04) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(size(vet)))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:18) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:09) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[0]=="MC"):
		mc=mc+1
	elif(vet[1]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:07) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:20) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[2]=="CM"):
		cm=cm+1
	elif(vet[3]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:28) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[4]=="E"):
		e=e+1
	elif(vet[5]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:44) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:27) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:12) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
print(max(vet))
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(max(v))
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:29) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(max(v))
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:42) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(max(v))
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:48) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(max(v))
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:49:52) 
-- CODE:
from numpy import*
vet = input("Digite o tom de pele: ").upper().split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v = zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]=="MC"):
		mc=mc+1
	elif(vet[i]=="C"):
		c=c+1
	elif(vet[i]=="CM"):
		cm=cm+1
	elif(vet[i]=="EM"):
		em=em+1
	elif(vet[i]=="E"):
		e=e+1
	elif(vet[i]=="ME"):
		me=me+1
v[0]=mc
v[1]=c
v[2]=cm
v[3]=em
v[4]=e
v[5]=me
print(max(v))
print(v)
		
-- EXECUTION TIME:
1.076
-- TEST CASE 1:
---- input:
MC,C,C,C,CM,EM,EM,ME,E
---- correct output:
3
[1 3 1 2 1 1]
---- user output:
3
[1 3 1 2 1 1]
-- TEST CASE 2:
---- input:
MC,C,C,C,CM,ME,EM,E,E
---- correct output:
3
[1 3 1 1 2 1]
---- user output:
3
[1 3 1 1 2 1]
-- TEST CASE 3:
---- input:
C,C,C,C,CM,EM,EM,ME,E
---- correct output:
4
[0 4 1 2 1 1]
---- user output:
4
[0 4 1 2 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
